--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <div style="text-align:center;">
     <canvas id="heroCanvas" height="600px" width="900px"></canvas>
   </div>
+  <script type="text/javascript" src="scripts/Songs.js"></script>
   <script type="text/javascript" src="scripts/Keytar.js"></script>
   <script type="text/javascript" src="scripts/KeytarRender.js"></script>
 </body>
