--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   <title>Document</title>
 </head>
 <body>
+	<audio id="myAudio"> 
+		<source src="SweetSong.mp3" type="audio/mpeg">
+	</audio>
   <div style="text-align:center; margin: 50px 0px;">
     <button id="start-game-button">START GAME</button>
   </div>
